--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -2,8 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0px;
-  padding: 0px 24px; 
-}
+  padding: 0px 24px; }
 
 body {
   background-color: #272822;
